fix: Configuration values lost when user submits again after refresh config page
