# api/docs/swagger.yaml
@@ -57,6 +57,13 @@ components:
         status_code:
           type: integer
       type: object
+    types.AppConfigValuesResponse:
+      properties:
+        values:
+          additionalProperties:
+            type: string
+          type: object
+      type: object
     types.AuthRequest:
       properties:
         password:
@@ -704,6 +711,21 @@ paths:
       tags:
       - kubernetes-install
   /kubernetes/install/app/config/values:
+    get:
+      description: Get the app config values
+      operationId: getKubernetesInstallAppConfigValues
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/types.AppConfigValuesResponse'
+          description: OK
+      security:
+      - bearerauth: []
+      summary: Get the app config values
+      tags:
+      - kubernetes-install
     post:
       description: Set the app config values
       operationId: postKubernetesInstallSetAppConfigValues
@@ -835,6 +857,21 @@ paths:
       tags:
       - linux-install
   /linux/install/app/config/values:
+    get:
+      description: Get the app config values
+      operationId: getLinuxInstallAppConfigValues
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/types.AppConfigValuesResponse'
+          description: OK
+      security:
+      - bearerauth: []
+      summary: Get the app config values
+      tags:
+      - linux-install
     post:
       description: Set the app config values
       operationId: postLinuxInstallSetAppConfigValues
